--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,20 +1,20 @@
 {{ define "main" }}
     <header>
-        <h3 class="section-title">
+        <p class="section-title">
             {{ if eq .Parent (.GetPage "/") }}
                 {{ T "list.section" }}
             {{ else }}
                 {{ .Parent.Title }}
             {{ end }}
-        </h3>
+        </p>
 
         <div class="section-card">
             <div class="section-details">
-                <p class="section-count">{{ T "list.page" (len .Pages) }}</p>
-                <h2 class="section-term">{{ .Title }}</h2>
+                <h1 class="section-term">{{ .Title }}</h1>
                 {{ with .Params.description }}
                     <p class="section-description">{{ . }}</p>
                 {{ end }}
+				<p class="section-count">Contient {{ T "list.page" (len .Pages) }}</p>
             </div>
     
             {{- $image := partialCached "helper/image" (dict "Context" . "Type" "section") .RelPermalink "section" -}}
