fix: make h1 unique across and on each page

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -2,6 +2,11 @@
   --theme-color: #e78228;
 }
 
+/* CUSTOM STYLES OVERRIDES */
+.site-name {
+  font-weight: bold;
+}
+
 /* CUSTOM SHORTODES */
 
 .jli-notice {
