--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -19,29 +19,29 @@
   {{ end }}
 
   <div class="article-title-wrapper">
-    <!-- {{ if .Scratch.Get "isHome" }} -->
-      <!-- <p>isHome is true from Scratch.Set (article > components > details) </p> -->
-    <!-- {{ else }} -->
-      <!-- <p>isHome is false from Scratch.Set (article > components > details)</p> -->
-    <!-- {{ end }} -->
-
-    {{ if .Scratch.Get "isHome" }}
-      <h2 class="article-title">
-        <a href="{{ .RelPermalink }}"> {{- .Title -}} </a>
-      </h2>
-
-      {{ with .Params.description }}
-      <h3 class="article-subtitle">{{ . }}</h3>
-      {{ end }}
+    {{ if .Scratch.Get "isHome" }} -->
+    <p class="jli-debug">
+      isHome is true from Scratch.Set (article > components > header)
+    </p>
     {{ else }}
-      <h1 class="article-title">
-        <a href="{{ .RelPermalink }}"> {{- .Title -}}</a>
-      </h1>
+    <p class="jli-debug">
+      isHome is false from Scratch.Set (article > components > header)
+    </p>
+    {{ end }} {{ if .Scratch.Get "isHome" }}
+    <h2 class="article-title">
+      <a href="{{ .RelPermalink }}"> {{- .Title -}} </a>
+    </h2>
 
-      {{ with .Params.description }}
-      <h2 class="article-subtitle">{{ . }}</h2>
-      {{ end }}
-    {{ end }}
+    {{ with .Params.description }}
+    <h3 class="article-subtitle">{{ . }}</h3>
+    {{ end }} {{ else }}
+    <h1 class="article-title">
+      <a href="{{ .RelPermalink }}"> {{- .Title -}}</a>
+    </h1>
+
+    {{ with .Params.description }}
+    <h2 class="article-subtitle">{{ . }}</h2>
+    {{ end }} {{ end }}
   </div>
 
   {{ $showReadingTime := .Params.readingTime | default
