fix: remove leftover comment tag...

--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -19,7 +19,7 @@
   {{ end }}
 
   <div class="article-title-wrapper">
-    {{ if .Scratch.Get "isHome" }} -->
+    {{ if .Scratch.Get "isHome" }}
     <p class="jli-debug">
       isHome is true from Scratch.Set (article > components > header)
     </p>
