fix: add hidden log

--- a/layouts/partials/article/article.html
+++ b/layouts/partials/article/article.html
@@ -1,5 +1,8 @@
 <article class="{{ if .Params.image }}has-image {{ end }}main-article">
     {{ .Scratch.Set "isHome" false }}  
+    <p class="jli-debug">
+      isHome is set to false from Scratch.Set (article > article)
+    </p>
     {{ partial "article/components/header" . }}
 
     {{ partial "article/components/content" . }}
