--- a/layouts/partials/article-list/default.html
+++ b/layouts/partials/article-list/default.html
@@ -3,12 +3,13 @@
 <article class="{{ if $image.exists }}has-image{{ end }}">
   {{ if .Scratch.Get "isHome" }}
   <p class="jli-debug">
-    isHome is true from Scratch.Set (article > components > header)
+    isHome is true from Scratch.Get (article > components > header)
   </p>
   {{ .Scratch.Set "isHome" true }} {{ else }}
   <p class="jli-debug">
-    isHome is false from Scratch.Set (article > components > header)
+    isHome is false from Scratch.Get (article > components > header)
   </p>
   {{ .Scratch.Set "isHome" false }} {{ end }} {{ partial
   "article/components/header" . }}
 </article>
+Get
