--- a/layouts/partials/article/components/header.html
+++ b/layouts/partials/article/components/header.html
@@ -32,12 +32,12 @@
 
     {{ if .Scratch.Get "isHome" }}
       <p class="jli-debug">
-      isHome is true from Scratch.Set (article > components > header)
+      isHome is true from Scratch.Get (article > components > header)
       </p>
       {{ .Scratch.Set "isHome" true }}
     {{ else }}
       <p class="jli-debug">
-      isHome is false from Scratch.Set (article > components > header)
+      isHome is false from Scratch.Get (article > components > header)
       </p>
       {{ .Scratch.Set "isHome" false }}  
     {{ end }}
