--- a/layouts/partials/article-list/default.html
+++ b/layouts/partials/article-list/default.html
@@ -2,14 +2,23 @@
 "articleList") .RelPermalink "articleList" }}
 <article class="{{ if $image.exists }}has-image{{ end }}">
   {{ if .Scratch.Get "isHome" }}
-  <p class="jli-debug">
-    isHome is true from Scratch.Get (article > components > header)
-  </p>
-  {{ .Scratch.Set "isHome" true }} {{ else }}
-  <p class="jli-debug">
-    isHome is false from Scratch.Get (article > components > header)
-  </p>
-  {{ .Scratch.Set "isHome" false }} {{ end }} {{ partial
-  "article/components/header" . }}
+    <p class="jli-debug">
+      isHome is true from Scratch.Get (article > components > header)
+    </p>
+    {{ .Scratch.Set "isHome" true }} 
+  {{ else }}
+    <p class="jli-debug">
+      isHome is false from Scratch.Get (article > components > header)
+    </p>
+    {{ .Scratch.Set "isHome" false }} 
+  {{ end }}
+  <!-- 25/08/23 : I add to "duplicate" the header partial because somehow,
+                  the "isHome" variable is evaluate to true on the home first
+				  and the posts seems to inherit from the value "true" even though
+				  it is not supposed to be.
+				  
+				  Not clean, but it works!
+  -->
+  {{ partial "article/components/header-for-article-list" . }}
 </article>
 Get
