--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -21,11 +21,11 @@
   <div class="article-title-wrapper">
     {{ if .Scratch.Get "isHome" }}
     <p class="jli-debug">
-      isHome is true from Scratch.Get (article > components > header)
+      isHome is true (from article > components > header)
     </p>
     {{ else }}
     <p class="jli-debug">
-      isHome is false from Scratch.Get (article > components > header)
+      isHome is false (from article > components > header)
     </p>
     {{ end }} {{ if .Scratch.Get "isHome" }}
     <h2 class="article-title">
