fix: add parentIsArticle and parentIsArticleList variable

--- a/layouts/partials/article/components/header-from-article-list.html
+++ b/layouts/partials/article/components/header-from-article-list.html
@@ -29,17 +29,14 @@
             </a>
         </div>
     {{ end }}
-
-    {{ if .Scratch.Get "isHome" }}
-      <p class="jli-debug">
-      isHome is true (from article > components > header-for-article-list)
-      </p>
-      {{ .Scratch.Set "isHome" true }}
-    {{ else }}
-      <p class="jli-debug">
-      isHome is false (from article > components > header)
-      </p>
-      {{ .Scratch.Set "isHome" false }}  
-    {{ end }}
+    <!-- 25/08/23 : I add to "duplicate" the header partial because somehow,
+                    the "isHome" variable is evaluate to true on the home first
+                    and the posts seems to inherit from the value "true" even though
+                    it is not supposed to be.
+                    
+                    Not clean, but it works!
+    -->
+    <!-- Thanks to https://mertbakir.gitlab.io/hugo/pass-arguments-in-partials-hugo/ -->
+    {{ .Scratch.Set "parentIsArticleList" true }}  
     {{ partial "article/components/details" . .RelPermalink }}
 </header>
