--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -19,29 +19,22 @@
   {{ end }}
 
   <div class="article-title-wrapper">
-    {{ if .Scratch.Get "isHome" }}
-    <p class="jli-debug">
-      isHome is true (from article > components > header)
-    </p>
-    {{ else }}
-    <p class="jli-debug">
-      isHome is false (from article > components > header)
-    </p>
-    {{ end }} {{ if .Scratch.Get "isHome" }}
-    <h2 class="article-title">
-      <a href="{{ .RelPermalink }}"> {{- .Title -}} </a>
-    </h2>
-
-    {{ with .Params.description }}
-    <h3 class="article-subtitle">{{ . }}</h3>
-    {{ end }} {{ else }}
-    <h1 class="article-title">
-      <a href="{{ .RelPermalink }}"> {{- .Title -}}</a>
-    </h1>
-
-    {{ with .Params.description }}
-    <h2 class="article-subtitle">{{ . }}</h2>
-    {{ end }} {{ end }}
+    {{ if .Scratch.Get "parentIsArticleList" }}
+      <h2 class="article-title">
+        <a href="{{ .RelPermalink }}"> {{- .Title -}} </a>
+      </h2>
+      {{ with .Params.description }}
+      <h3 class="article-subtitle">{{ . }}</h3>
+      {{ end }} 
+    {{ end }} 
+    {{ if .Scratch.Get "parentIsArticle" }}
+      <h1 class="article-title">
+        <a href="{{ .RelPermalink }}"> {{- .Title -}}</a>
+      </h1>
+      {{ with .Params.description }}
+      <h2 class="article-subtitle">{{ . }}</h2>
+      {{ end }} 
+    {{ end }}
   </div>
 
   {{ $showReadingTime := .Params.readingTime | default
