--- a/layouts/shortcodes/blockcontainer.html
+++ b/layouts/shortcodes/blockcontainer.html
@@ -1,29 +1,11 @@
-{{- $noticeType := .Get 0 -}} {{- $noticeTitle := .Get 1 -}}
+{{- $noticeType := .Get 0 -}}
+{{- $noticeTitle := .Get 1 -}}
 <!-- {{- $raw := (markdownify .Inner | chomp) -}} -->
-{{- $raw := (.Page.RenderString .Inner | chomp) -}} {{- $block := findRE
-"(?is)^<(?:address|article|aside|blockquote|canvas|dd|div|dl|dt|fieldset|figcaption|figure|footer|form|h(?:1|2|3|4|5|6)|header|hgroup|hr|li|main|nav|noscript|ol|output|p|pre|section|table|tfoot|ul|video)\\b"
-$raw 1 -}}
+{{- $raw := (.Page.RenderString .Inner | chomp) -}}
+{{- $block := findRE "(?is)^<(?:address|article|aside|blockquote|canvas|dd|div|dl|dt|fieldset|figcaption|figure|footer|form|h(?:1|2|3|4|5|6)|header|hgroup|hr|li|main|nav|noscript|ol|output|p|pre|section|table|tfoot|ul|video)\\b" $raw 1 -}}
 <!-- {{ $icon := (replace (index $.Site.Data.SVG $noticeType) "icon" "icon notice-icon") }} -->
-<div
-  class="jli-notice {{ $noticeType }}"
-  {{
-  if
-  len
-  .Params
-  |
-  eq
-  2
-  }}
-  id="{{ .Get 1 }}"
-  {{
-  end
-  }}
->
-  <p class="jli-notice-title">
-    <!--{{ $icon | safeHTML }}-->
-    {{ $noticeTitle }}
-  </p>
-  {{- if or $block (not $raw) }}{{ $raw }}{{ else }}
-  <p>{{ $raw }}</p>
-  {{ end -}}
+<div class="jli-notice {{ $noticeType }}" {{ if len .Params | eq 2 }} id="{{ .Get 1 }}" {{ end }}>
+    <p class="jli-notice-title">
+		<!-- {{ $icon | safeHTML }} --> {{ $noticeTitle }}</p>
+    {{- if or $block (not $raw) }}{{ $raw }}{{ else }}<p>{{ $raw }}</p>{{ end -}}
 </div>
