--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -10,6 +10,47 @@
   font-weight: bold;
 }
 
+iframe.newsletter-embed {
+  width: 100%;
+  height: 16em;
+  border-radius: 8px;
+}
+
+.participate .action-button {
+  display: inline-block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0.75rem 1.5rem;
+  border: 2px solid var(--theme-color);
+  border-radius: 0.5rem;
+  color: var(--theme-color);
+  font-size: 1.2rem;
+  transition: color var(--color-transition), color var(--color-transition);
+}
+
+.participate .action-button.primary {
+  background: var(--theme-color);
+  color: var(--white);
+}
+
+.participate .participate-options {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-around;
+}
+
+@media (min-width: 30em) {
+  .participate .participate-options {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+.participate article {
+  margin-bottom: 1em;
+}
+
 /* CUSTOM SHORTODES */
 
 .jli-notice {
