--- a/layouts/partials/article/components/header-from-article-list.html
+++ b/layouts/partials/article/components/header-from-article-list.html
@@ -10,12 +10,13 @@
                     {{- $Srcset := "" -}}
                     
                     {{- if (default true .Page.Site.Params.imageProcessing.cover.enabled) -}}
-                        {{- $thumbnail := $image.resource.Resize "800x" -}}
-                        {{- $thumbnailRetina := $image.resource.Resize "1600x" -}}
-                        {{- $Srcset = printf "%s 800w, %s 1600w" $thumbnail.RelPermalink $thumbnailRetina.RelPermalink -}}
-                        {{- $Permalink = $thumbnail.RelPermalink -}}
-                        {{- $Width = $thumbnail.Width -}}
-                        {{- $Height = $thumbnail.Height -}}
+                        {{- $small := $image.resource.Resize "360x" -}}
+                        {{- $medium := $image.resource.Resize "600x" -}}
+                        {{- $large := $image.resource.Resize "1024x" -}}
+                        {{- $Srcset = printf "%s 360w, %s 600w, %s 1024w" $small.RelPermalink $medium.RelPermalink $large.RelPermalink -}}
+                        {{- $Permalink = $medium.RelPermalink -}}
+                        {{- $Width = $medium.Width -}}
+                        {{- $Height = $medium.Height -}}
                     {{- end -}}
                     <img src="{{ $Permalink }}"
                         {{ with $Srcset }}srcset="{{ . }}"{{ end }}
