adjust the conf to:
- display date properly,
- render 8 articles per page,
- remove debug line on render-link
- and localization of netlifyCMS

--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,7 +1,7 @@
 {{- $url := urls.Parse .Destination -}}
 {{- $scheme := $url.Scheme -}}
 
-{{ printf "%#v" $.Destination }}
+<!-- {{ printf "%#v" $.Destination }} -->
 
 <a href="
   {{- if eq $scheme "" -}}
