fix dual canonical link

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -8,7 +8,11 @@
 {{- $title := partialCached "data/title" . .RelPermalink -}}
 <title>{{ $title }}</title>
 
-<link rel='canonical' href='{{ .Permalink }}'>
+{{ with .Params.relcanonical }}
+  <link rel="canonical" href="{{ . | relLangURL }}" itemprop="url" />
+{{ else -}}
+  <link rel="canonical" href="{{ .Permalink }}" itemprop="url" />
+{{ end -}}
 
 {{- partial "head/style.html" . -}}
 {{- partial "head/script.html" . -}}
