--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -26,7 +26,7 @@
 	{{- end -}}
 {{- end -}}
 
-<figure>
+<!-- <figure> -->
 
 	<img src="{{ $Permalink }}"
 	{{ with $Width }}width="{{ . }}"{{ end }}
@@ -42,9 +42,9 @@
 		data-flex-basis="{{ div (mul $image.Width 240) $image.Height }}px"
 		{{ end }}
 		>
-	<figcaption>
+<!--	<figcaption>
 		{{ with $alt }}
 		{{ . }}
 		{{ end }}
 	</figcaption>
-</figure>
+</figure>-->
