--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -104,18 +104,14 @@ summary .widget-title-hint {
 }
 
 figure {
-  background-color: var(--accent-color);
-  border: 4px solid var(--accent-color);
+  /* background-color: var(--accent-color); */
+  /* border: 4px solid var(--accent-color); */
   border-radius: 0.5em;
   color: var(--accent-color-text);
 }
 
 figure img {
   border-radius: 0.5em;
-}
-
-.article-content figure figcaption {
-  color: var(--accent-color-text);
 }
 
 iframe.newsletter-embed {
