update custom layout and partials

--- a/layouts/partials/article/components/details.html
+++ b/layouts/partials/article/components/details.html
@@ -1,22 +1,13 @@
 <div class="article-details">
-  {{ if .Params.categories }}
-  <header class="article-category">
-    {{ range (.GetTerms "categories") }}
-    <a
-      href="{{ .RelPermalink }}"
-      {{
-      with
-      .Params.style
-      }}style="background-color: {{ .background }}; color: {{ .color }};"
-      {{
-      end
-      }}
-    >
-      {{ .LinkTitle }}
-    </a>
+    {{ if .Params.categories }}
+    <header class="article-category">
+        {{ range (.GetTerms "categories") }}
+            <a href="{{ .RelPermalink }}" {{ with .Params.style }}style="background-color: {{ .background }}; color: {{ .color }};"{{ end }}>
+                {{ .LinkTitle }}
+            </a>
+        {{ end }}
+    </header>
     {{ end }}
-  </header>
-  {{ end }}
 
   <div class="article-title-wrapper">
     <h1 class="article-title">
@@ -27,28 +18,32 @@
     {{ end }} 
   </div>
 
-  {{ $showReadingTime := .Params.readingTime | default
-  (.Site.Params.article.readingTime) }} {{ $showDate := not .Date.IsZero }} {{
-  $showFooter := or $showDate $showReadingTime }} {{ if $showFooter }}
-  <footer class="article-time">
-    {{ if $showDate }}
-    <div>
-      {{ partial "helper/icon" "date" }}
-      <time class="article-time--published">
-        {{- .Date.Format (or .Site.Params.dateFormat.published "Jan 02, 2006")
-        -}}
-      </time>
-    </div>
-    {{ end }} {{ if $showReadingTime }}
-    <div>
-      {{ partial "helper/icon" "clock" }}
-      <time class="article-time--reading">
-        {{ T "article.readingTime" .ReadingTime }}
-      </time>
-    </div>
+    {{ $showReadingTime := .Params.readingTime | default (.Site.Params.article.readingTime) }}
+    {{ $showDate := not .Date.IsZero }}
+    {{ $showFooter := or $showDate $showReadingTime }}
+    {{ if $showFooter }}
+    <footer class="article-time">
+        {{ if $showDate }}
+            <div>
+                {{ partial "helper/icon" "date" }}
+                <time class="article-time--published">
+                    {{- .Date | time.Format (or .Site.Params.dateFormat.published "Jan 02, 2006") -}}
+                </time>
+            </div>
+        {{ end }}
+
+        {{ if $showReadingTime }}
+            <div>
+                {{ partial "helper/icon" "clock" }}
+                <time class="article-time--reading">
+                    {{ T "article.readingTime" .ReadingTime }}
+                </time>
+            </div>
+        {{ end }}
+    </footer>
     {{ end }}
-  </footer>
-  {{ end }} {{ if .IsTranslated }}
+
+    {{ if .IsTranslated }}
   <footer class="article-translations">
     {{ partial "helper/icon" "language" }}
     <div>
