--- a/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
+++ b/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
@@ -38,7 +38,7 @@
     </header>
 
     {{- with .Site.Menus.social -}}
-        <ol class="menu-social">
+        <ol class="social-menu">
             {{ range . }}
                 <li>
                     <a 
