add css class to identify the page listing compact list of articles

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -94,7 +94,7 @@
   {{ $paginator :=
     .Paginate $pages
   }}
-  <section class="article-list--compact">
+  <section class="article-list--compact list">
     {{ range $paginator.Pages }}{{ partial "article-list/compact" . }}{{ end }}
   </section>
 
