--- a/layouts/partials/widget/categories.html
+++ b/layouts/partials/widget/categories.html
@@ -1,20 +1,30 @@
-{{- $context := .Context -}} {{- $limit := default 10 .Params.limit -}}
+{{- $context := .Context -}}
+{{- $limit := default 10 .Params.limit -}}
 <section class="widget tagCloud">
   <details>
     <summary
       class="widget-title section-title"
-      aria-label="Cliquer pour voir les catégories"
-      title="Cliquer pour voir les catégories"
-    >
+      aria-label="{{ T "widget.categoriesCloud.accessibleLabel" }}"
+      title="{{ T "widget.categoriesCloud.accessibleLabel" }}">
       <span class="widget-icon">{{ partial "helper/icon" "categories" }}</span>
-      <span class="widget-title"> Catégories </span>
+      <span class="widget-title"> {{ T "widget.categoriesCloud.title" }} </span>
     </summary>
     <div class="tagCloud-tags">
       {{ range first $limit $context.Site.Taxonomies.categories.ByCount }}
-      <a href="{{ .Page.RelPermalink }}" class="font_size_{{ .Count }}">
-        {{ .Page.Title }}
-      </a>
+        <a href="{{ .Page.RelPermalink }}" class="font_size_{{ .Count }}">
+          {{ .Page.Title }} ({{ .Count }})
+        </a>
       {{ end }}
+      <div>
+        <p>{{ T "widget.categoriesCloud.allDivParagraph" }}</p>
+        <a
+          href="{{ urlize "/categories/" }}"
+          title="{{ T "widget.tagCloud.allTags" }}"
+          ><strong
+            >⏩ {{ T "widget.categoriesCloud.allDivLinkText" }} ⏪</strong
+          >
+        </a>
+      </div>
     </div>
   </details>
 </section>
