--- a/layouts/partials/widget/tag-cloud.html
+++ b/layouts/partials/widget/tag-cloud.html
@@ -1,20 +1,30 @@
-{{- $context := .Context -}} {{- $limit := default 10 .Params.limit -}}
+{{- $context := .Context -}}
+{{- $limit := default 10 .Params.limit -}}
+
+
 <section class="widget tagCloud">
   <details>
     <summary
       class="widget-title section-title"
-      aria-label="Cliquer pour voir les étiquettes"
-      title="Cliquer pour voir les étiquettes"
-    >
+      aria-label="{{ T "widget.tagCloud.accessibleLabel" }}"
+      title="{{ T "widget.tagCloud.accessibleLabel" }}">
       <span class="widget-icon">{{ partial "helper/icon" "tag" }}</span>
       <span class="widget-title">{{ T "widget.tagCloud.title" }}</span>
     </summary>
     <div class="tagCloud-tags">
       {{ range first $limit $context.Site.Taxonomies.tags.ByCount }}
-      <a href="{{ .Page.RelPermalink }}" class="font_size_{{ .Count }}">
-        {{ .Page.Title }}
-      </a>
+        <a href="{{ .Page.RelPermalink }}" class="font_size_{{ .Count }}">
+          {{ .Page.Title }} ({{ .Count }})
+        </a>
       {{ end }}
+      <div>
+        <p>{{ T "widget.tagCloud.allDivParagraph" }}</p>
+        <a
+          href="{{ urlize "/tags/" }}"
+          title="{{ T "widget.tagCloud.allTags" }}"
+          ><strong>⏩ {{ T "widget.tagCloud.allDivLinkText" }} ⏪</strong>
+        </a>
+      </div>
     </div>
   </details>
 </section>
