--- a/layouts/partials/widget/tag-cloud.html
+++ b/layouts/partials/widget/tag-cloud.html
@@ -18,7 +18,9 @@
         </a>
       {{ end }}
       <div>
-        <p>{{ T "widget.tagCloud.allDivParagraph" }}</p>
+        <p>
+          {{ T "widget.tagCloud.allDivParagraph" (dict "MaxInCloud" $limit) | safeHTML }}
+        </p>
         <a
           href="{{ urlize "/tags/" }}"
           title="{{ T "widget.tagCloud.allTags" }}"
